# FaceRecognitionDlib

./: README.md  encodings.pkl  main.py  pyproject.toml
src/: encode_faces.py  landmark_detection.py  webcam_recognition.py
