[project]
name = "facerecognitiondlib"
version = "0.1.0"
description = "Face Detection and Recognition using DLib and OpenCV"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "dlib>=20.0.1",
    "face-recognition>=1.3.0",
    "face_recognition_models>=0.3.0",
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
    "pillow>=11.0.0",
    "setuptools>=65.5.0,<82",
]
